# datacrunch-python

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MIGRATION.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: code_style.yml  format.yml  lint.yml  publish.yml  publish_datacrunch.yml  publish_package.yml  publish_verda.yml  python-package.yml  unit_tests.yml
datacrunch/: __init__.py  __version__.py  _version.py  constants.py  datacrunch.py  exceptions.py  helpers.py
datacrunch/InferenceClient/: inference_client.py
datacrunch/authentication/: authentication.py
datacrunch/balance/: balance.py
datacrunch/containers/: __init__.py  containers.py
datacrunch/http_client/: http_client.py
datacrunch/images/: images.py
datacrunch/instance_types/: instance_types.py
datacrunch/instances/: instances.py
datacrunch/locations/: locations.py
datacrunch/ssh_keys/: ssh_keys.py
datacrunch/startup_scripts/: startup_scripts.py
datacrunch/volume_types/: volume_types.py
datacrunch/volumes/: volumes.py
datacrunch_compat/: README.md  pyproject.toml
datacrunch_compat/datacrunch/: __init__.py  constants.py  containers.py  datacrunch.py  exceptions.py  helpers.py  images.py  instance_types.py  instances.py  ssh_keys.py  volume_types.py  volumes.py
datacrunch_compat/datacrunch/InferenceClient/: __init__.py  inference_client.py
datacrunch_compat/datacrunch/authentication/: authentication.py
datacrunch_compat/datacrunch/balance/: balance.py
datacrunch_compat/datacrunch/http_client/: http_client.py
datacrunch_compat/datacrunch/locations/: locations.py
datacrunch_compat/datacrunch/startup_scripts/: startup_scripts.py
datacrunch_compat/tests/: smoke_datacrunch.py  test_datacrunch.py
docs/: Makefile  requirements.txt
docs/source/: API.rst  conf.py  examples.rst  index.rst  installation.rst
docs/source/api/services/: balance.rst  containers.rst  images.rst  instance_types.rst  instances.rst  ssh_keys.rst  startup_scripts.rst  volume_types.rst  volumes.rst
docs/source/examples/: advanced_create_instance.rst  instance_actions.rst  instances_and_volumes.rst  simple_create_instance.rst  ssh_keys.rst  startup_scripts.rst  storage_volumes.rst
docs/source/examples/containers/: compute_resources.rst  deployments.rst  environment_variables.rst  fileset_secrets.rst  index.rst  inference_async.rst  inference_minimal.rst  inference_minimal_async.rst  inference_sync.rst  registry_credentials.rst  scaling.rst  secrets.rst  sglang.rst
examples/: advanced_create_instance.py  container_deployments.py  instance_actions.py  instances_and_volumes.py  simple_create_instance.py  simple_create_server.py  ssh_keys.py  startup_scripts.py  storage_volumes.py
examples/containers/: calling_the_endpoint_asynchronously.py  calling_the_endpoint_synchronously.py  calling_the_endpoint_with_inference_key.py  calling_the_endpoint_with_inference_key_async.py  compute_resources_example.py  container_deployments.py  container_deployments_example.py  delete_deployment_example.py  environment_variables_example.py  fileset_secret_example.py  registry_credentials_example.py  secrets_example.py  sglang_deployment.py  sglang_deployment_example.py  update_deployment_scaling.py  update_deployment_scaling_example.py
tests/: smoke_verda.py
tests/integration_tests/: conftest.py  test_instances.py  test_locations.py  test_volumes.py
tests/unit_tests/: conftest.py  test_client.py  test_datacrunch.py  test_exceptions.py
tests/unit_tests/authentication/: test_authentication.py
tests/unit_tests/balance/: test_balance.py
tests/unit_tests/containers/: test_containers.py
tests/unit_tests/http_client/: test_http_client.py
tests/unit_tests/images/: test_images.py
tests/unit_tests/instance_types/: test_instance_types.py
tests/unit_tests/instances/: test_instances.py
tests/unit_tests/ssh_keys/: test_ssh_keys.py
tests/unit_tests/startup_scripts/: test_startup_scripts.py
tests/unit_tests/volume_types/: test_volume_types.py
tests/unit_tests/volumes/: test_volumes.py
verda/: __init__.py  _verda.py  _version.py  constants.py  datacrunch.py  exceptions.py  helpers.py  verda.py
verda/InferenceClient/: __init__.py
verda/authentication/: __init__.py  _authentication.py  authentication.py
verda/balance/: __init__.py
verda/containers/: __init__.py  _containers.py  containers.py
verda/http_client/: __init__.py  http_client.py
verda/images/: __init__.py  images.py
verda/inference_client/: __init__.py
verda/instance_types/: __init__.py
verda/instances/: __init__.py  instances.py
verda/locations/: __init__.py
verda/ssh_keys/: __init__.py
verda/startup_scripts/: __init__.py
verda/volume_types/: __init__.py  _volume_types.py
verda/volumes/: __init__.py
