[project]
name = "datacrunch"
version = "1.15.0"
description = "Official Python SDK for DataCrunch Public API"
readme = "README.md"
requires-python = ">=3.11"

authors = [{ name = "DataCrunch Oy", email = "info@datacrunch.io" }]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = ["requests>=2.25.1,<3", "dataclasses_json>=0.6.7"]

[dependency-groups]
dev = [
    "pytest-cov>=2.10.1,<3",
    "pytest-responses>=0.4.0,<1",
    "pytest>=8.1,<9",
    "python-dotenv>=1.1.1",
    "responses>=0.12.1,<1",
    "ruff>=0.14.2",
]

[project.urls]
Homepage = "https://github.com/DataCrunch-io"
Documentation = "https://datacrunch-python.readthedocs.io/"
Repository = "https://github.com/DataCrunch-io/datacrunch-python"
Changelog = "https://datacrunch-python.readthedocs.io/en/latest/changelog.html"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "datacrunch"
module-root = ""

[tool.ruff]
# TODO(shamrin) fix these errors and stop ignoring them
lint.ignore = ["E721", "E711", "E712", "F401"]
